--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   },
   "homepage": "https://github.com/ConnorJohnHughes/pizza--#readme",
   "dependencies": {
-    "express": "^5.1.0"
+    "dotenv": "^17.2.3",
+    "ejs": "^3.1.10",
+    "express": "^5.1.0",
+    "mysql2": "^3.15.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
